[gd_scene load_steps=6 format=3 uid="uid://btnefaw6pecvm"]

[ext_resource type="Script" path="res://scenes/game/earningsScreen/earnings_screen.gd" id="1_h24vq"]
[ext_resource type="FontFile" uid="uid://bbrprp5tbdsu2" path="res://assets/Kenney Pixel.ttf" id="1_xevcq"]
[ext_resource type="Texture2D" uid="uid://drww776kftggr" path="res://scenes/game/earningsScreen/PantallaPuntaje.png" id="3_2a865"]
[ext_resource type="Theme" uid="uid://d2g42ey2qlbr4" path="res://themes/default_theme.tres" id="3_hmqke"]
[ext_resource type="Theme" uid="uid://ce2lb7axfywhf" path="res://themes/white_buttons/white_buttons.tres" id="4_nj5f8"]

[node name="earningsScreen" type="CanvasLayer"]
script = ExtResource("1_h24vq")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xevcq")
theme_override_font_sizes/font_size = 70
text = "Ganancias y cosas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reaccion" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2a865")

[node name="backButton" type="Button" parent="."]
offset_left = 1605.0
offset_top = 935.0
offset_right = 1898.0
offset_bottom = 1057.0
theme = ExtResource("4_nj5f8")
theme_type_variation = &"FlatButton"
text = "VOLVER"

[node name="Cuentas2" type="VBoxContainer" parent="."]
visible = false
offset_left = 957.0
offset_top = 265.0
offset_right = 1849.0
offset_bottom = 833.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Cuentas" type="GridContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.108
anchor_right = 0.5
anchor_bottom = 0.108
offset_left = -420.0
offset_top = 175.36
offset_right = 373.0
offset_bottom = 859.36
theme = ExtResource("3_hmqke")
theme_override_constants/h_separation = 200
theme_override_constants/v_separation = 40
columns = 2

[node name="Conseguidos" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "PEDIDOS ENTREGADOS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConseguidosNum" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="Precio" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 45
text = "PRECIO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrecioNum" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Propinas" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 45
text = "PROPINAS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PropinasNum" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoConseguidos" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 45
text = "PEDIDOS NO ENTREGADOS"
horizontal_alignment = 2
vertical_alignment = 1
justification_flags = 171

[node name="NoConseguidosNum" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 2
vertical_alignment = 1
justification_flags = 171

[node name="Blank" type="Label" parent="Cuentas"]
layout_mode = 2

[node name="Blank2" type="Label" parent="Cuentas"]
layout_mode = 2

[node name="Total" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 55
text = "TOTAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalNum" type="Label" parent="Cuentas"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[node name="NuevoRecord" type="Label" parent="."]
offset_left = 977.0
offset_top = 722.0
offset_right = 1335.0
offset_bottom = 797.0
theme = ExtResource("3_hmqke")
theme_override_colors/font_color = Color(0.937255, 0.941176, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
